Solve wrap problem

--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@ h2{
     font-size: 20px;
 }
 .free-hubspot-crm{
-    width: 1280px;
     margin-left: auto;
     margin-right: auto;
 
